# tasmota2wb

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  tasmota2wb.json  tasmota2wb.service  tasmotawb.json
DEBIAN/: tasmotawb
bullseye/: tasmota2wb
old/: tasmota2wb
tasmota2wb/: Makefile.am  MqttConnection.cpp  MqttConnection.h  stdafx.h  tasmota2wb.cpp
tasmotawb/: Makefile.am  MqttConnection.cpp  MqttConnection.h  tasmotawb.cpp
